# casper_robot

./: .gitmodules
src/articubot_one/config/: my_controllers.yaml  my_controllers_gazebo.yaml  nav2_params.yaml  twist_mux.yaml
src/articubot_one/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  materials.xacro  robot_core.xacro  robot_properties.xacro  ros2_control.xacro
src/articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py
src/articubot_one/worlds/: my_world.world
src/camera_publisher/: package.xml  setup.py
src/camera_publisher/camera_publisher/: camera_publisher.py
src/camera_publisher/launch/: camera_publisher.launch.py
src/camera_stream/: CMakeLists.txt  package.xml
src/camera_stream/include/camera_stream/: camera_publisher.py
src/camera_stream/launch/: camera_publisher.launch.py  camera_stream.launch.py
src/cv_launcher/: package.xml  setup.cfg  setup.py
src/cv_launcher/cv_launcher/: cv_window_node.py
src/cv_launcher/launch/: cv_window_launch.py
src/diffdrive_arduino/bringup/config/: diffbot_controllers.yaml
src/diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_arduino/hardware/: diffbot_system.cpp
src/diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  wheel.h
src/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp  fake_robot.cpp  wheel.cpp
