<?xml version="1.0"?>
<package format="3">
  <name>camera_stream</name>
  <version>0.0.1</version>
  <description>Camera stream launch package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
